--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <div class="container text-center">
       <div class="row">
         <div class="col-xs-12">
-          <h1 class="titre bold"><i class="fa fa-calculator"></i>Calculatrice Javascript</h1>
+          <h1 class="titre bold"><i class="fa fa-calculator"></i>Calculatrice Javascript v1.0</h1>
         </div>
       </div>
       <div class="row">
